Development (#9)
* refactor(auth-center): organize Java sources by concern + migrate tests to WebTestClient

Java package layout (concern-first):
  config/     — AuthenticationConfig, SecurityConfig
  security/   — AppUserDetailsService, JsonAuthHandlers, JsonLoginFilter,
                JwtAuthenticationFilter
  web/        — AuthController, RefreshController, StubsController
  init/       — DataInitializer
  root        — AuthCenterApplication only (entrypoint)

Cross-package fixes:
  - SecurityConfig + RefreshController get explicit imports for the
    classes that used to be same-package.
  - JsonLoginFilter.buildRefreshCookie + REFRESH_COOKIE_{NAME,PATH,MAX_AGE}
    promoted from package-private static to public static so
    RefreshController (now in web/) can reuse them.

Test migration (Spring Boot 4):
  - TestRestTemplate was removed in Boot 4.0.7 and so was
    @AutoConfigureWebTestClient. Integration test now uses
    MockMvcWebTestClient.bindToApplicationContext(context)
    with SecurityMockMvcConfigurers.springSecurity() to keep the
    JsonLoginFilter / JwtAuthenticationFilter in the chain.
  - webEnvironment drops from RANDOM_PORT to MOCK — MockMvc drives
    the same DispatcherServlet + filter chain without opening a
    Tomcat port.
  - .returnResult(Void.class) returns FluxExchangeResult<Void>
    (not EntityExchangeResult<Void>) — type fixed throughout.
  - Fixed stale assertion Path=/auth → Path=/ in cookie tests
    (the JsonLoginFilter switched to Path=/ when the gateway
    started mounting /api/auth/refresh).

Pom.xml (test scope only — runtime stays pure servlet):
  + spring-boot-starter-webflux — required on the test classpath so
    WebTestClient can be instantiated (Spring 7 enforces this even
    in MockMvc mode).
  + spring-security-test — provides SecurityMockMvcConfigurers.

14/14 tests green.

* feat(sso-admin): add query + write-definition catalog with per-row role authorization

Adds the catalog endpoints (/getQuery, /getWrite) th